<resources>
    <string name="app_name">MiniPoll</string>
    <string name="my_error">Erreur avec la db</string>

    <!-- CreateQuestion-->
    <string name="create_question_instruction">Saissez un titre</string>
    <string name="reponse1">Bonne réponse</string>
    <string name="reponse2">Mauvaise réponse 1</string>
    <string name="reponse3">Mauvaise réponse 2</string>
    <string name="reponse4">Mauvaies réponse 3</string>
    <string name="valide">Valider</string>
    <string name="select_right_answer">Sélectionnez la réponse correcte</string>
    <string name="manque_champs">Veuillez renseigner tous les champs</string>
    <string name="mcq_titre">Choisissez un titre</string>
    <string name="mcq_alert">Donnez un titre et un nombre de questions</string>
    <string name="well_done">Questionnaire enregistré avec succès !</string>

    <!-- ChooseFriend -->
    <string name="list_error">Veuillez sélectionner au moins un ami</string>

    <!-- Sondage -->
    <string name="my_nopollerror">Pas d\'item sélectionné</string>
    <string name="show_list_name_title">Nom de l\'élément de collection</string>

    <!-- Login -->
    <string name="login_activity_title">Connexion</string>
    <string name="login_btn">Se connecter</string>
    <string name="register_btn">Créer un compte</string>
    <string name="login_password_hint">Mot de passe</string>
    <string name="login_username">Nom d\'utilisateur</string>
    <string name="login_wrong_password_msg">Le mot de passe saisi est incorrect</string>
    <string name="login_user_inexistant_msg">Cet utilisateur n\'existe pas</string>

    <!-- Registration -->
    <string name="registration_login_hint">Nom d\'utilisateur</string>
    <string name="registration_password_hint">Mot de passe</string>
    <string name="registration_password_confirmation_hint">Confirmation du mot de passe</string>
    <string name="registration_password_mismatch_msg">La confirmation est différente du mot de passe</string>
    <string name="registration_password_invalid_msg">Le mot de passe est trop court ou contient des blancs</string>
    <string name="registration_login_invalid_msg">Le nom d\'utilisateur est trop court ou contient des blancs à ses extrémités</string>
    <string name="registration_existing_login_msg">Le nom d\'utilisateur existe déjà</string>
    <string name="registration_btn">Vers la création de profil</string>

    <!-- Profile Creation -->
    <string name="profile_creation_email_hint">Adresse mail</string>
    <string name="profile_creation_first_name_hint">Prénom</string>
    <string name="profile_creation_last_name_hint">Nom de famille</string>
    <string name="profile_creation_btn">Créer mon profil</string>
    <string name="profile_creation_invalid_email_msg">L\'adresse mail est incorrecte</string>
    <string name="profile_creation_invalid_first_name_msg">Le prénom est incorrect</string>
    <string name="profile_creation_invalid_last_name_msg">Le nom de famille est incorrect</string>
    <string name="profile_creation_pic_btn">Photo de profil</string>
    <string name="profile_creation_picture_updated_msg">Image changée</string>

    <!-- Profile Update -->
    <string name="profile_update_pic_btn">Changer la photo de profil</string>
    <string name="profile_update_confirm_btn">Confirmer</string>
    <string name="profile_update_credentials_btn">Changer les infos de login</string>
    <string name="profile_update_invalid_email_msg">L\'adresse mail est incorrecte</string>
    <string name="profile_update_invalid_first_name_msg">Le prénom est incorrect</string>
    <string name="profile_update_invalid_last_name_msg">Le nom de famille est incorrect</string>
    <string name="profile_update_updated_picture_msg">Image changée</string>

    <!-- Credentials Update -->
    <string name="credentials_update_btn">Confirmer</string>
    <string name="credentials_update_old_password_hint">Ancien mot de passe</string>
    <string name="credentials_update_new_password_hint">Nouveau mot de passe</string>
    <string name="credentials_update_new_password_confirmation_hint">Confirmation du nouveau mot de passe</string>
    <string name="credentials_update_wrong_old_password_msg">L\'ancien mot de passe est incorrect</string>
    <string name="credentials_update_password_mismatch_msg">La confirmation est différente du mot de passe</string>
    <string name="credentials_update_invalid_login_msg">Le nom d\'utilisateur est trop court ou contient des blancs à ses extrémités</string>
    <string name="credentials_update_existing_login_msg">Le nom d\'utilisateur existe déjà</string>
    <string name="credentials_update_password_invalid_msg">Le mot de passe est trop court ou contient des blancs</string>
    <string name="credentials_update_updated_msg">Les valeurs ont été changées</string>

    <!-- Main / Main Menu -->
    <string name="menu">Menu</string>
    <string name="help_friends">Aider vos amis dans leurs choix</string>
    <string name="create">Créer</string>
    <string name="my_profile">Mon Profil</string>
    <string name="quiz">Questionnaire</string>
    <string name="my_friends">Mes amis</string>
    <string name="poll">Sondage</string>
    <string name="menu_logout">Pour quitter l\'application, appuyez deux fois sur retour</string>

    <!-- Show -->
    <string name="show_list_no_result">Aucun résultat ne correspond à votre recherche</string>
    <string name="show_list_error_no_item">Aucun élément dans votre collection. Commencez par en ajouter.</string>


    <!-- validate friend-->
    <string name="select_friend">Sélectionnez des amis</string>

    <!-- Friends List -->
    <string name="email">Adresse mail</string>
    <string name="name">Nom</string>
    <string name="identifier">Identifiant</string>

    <!-- Create -->
    <string name="create_choice_poll">Sondage pour un choix</string>
    <string name="create_poll">Créer un sondage</string>
    <string name="create_decision_poll">Sondage pour un accord</string>

    <!-- Array -->
    <string-array name="format">
        <item>Texte</item>
        <item>Image</item>
    </string-array>

    <!-- Notify -->
    <string name="notNumber">Veuillez entre un nombre</string>
    <string name="invalidChoice">Veuillez entre un nombre entre 2 et 6 pour le nombre de choix</string>
    <string name="invalidTop">Veuillez entre un nombre entre 1 et 6 pour le nombre de choix</string>
    <string name="constraint">Le nombre de top ne peut pas être plus grand que le nombre de choix</string>
    <string name="noName">Veuillez entrer un titre au sondage</string>
    <string name="invalidfield">"Au moins un champ n'a pas été édité"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="title_activity_validate_friend">ValidateFriend</string>
    <string name="title_activity_create_question">CreateQuestion</string>
    <string name="title_activity_previsualisation_mcq">PrevisualisationMCQ</string>

</resources>
