<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.lsinf1225gr12.minipoll.minipoll.activity.ProfileCreationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/ic_logo"
        android:contentDescription="@string/app_name"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/profile_creation_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/profile_creation_email_hint"
        android:imeActionLabel="@string/profile_creation_btn"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/profile_creation_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/profile_creation_first_name_hint"
        android:imeActionLabel="@string/profile_creation_btn"
        android:imeOptions="actionDone"
        android:inputType="textVisiblePassword|textNoSuggestions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_creation_email" />

    <EditText
        android:id="@+id/profile_creation_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/profile_creation_last_name_hint"
        android:imeActionLabel="@string/profile_creation_btn"
        android:imeOptions="actionDone"
        android:inputType="textVisiblePassword|textNoSuggestions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_creation_first_name" />

    <EditText
        android:id="@+id/profile_creation_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/profile_creation_pic_hint"
        android:imeActionId="6"
        android:imeActionLabel="@string/profile_creation_btn"
        android:imeOptions="actionDone"
        android:inputType="textVisiblePassword|textNoSuggestions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_creation_last_name" />

    <Button
        android:id="@+id/profile_creation_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableEnd="@drawable/ic_go"
        android:drawableRight="@drawable/ic_go"
        android:onClick="createProfile"
        android:text="@string/profile_creation_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_creation_pic" />

</android.support.constraint.ConstraintLayout>